# epd-spi

./: CMakeLists.txt  README.md
include/: epd_common.h  epd_panel_gdew042t2.h  epd_panel_wfh0420cz35.h  epd_private.h  lcd_panel_jlx256128g_920.h  oled_panel_elw1501aa.h
include/epd-spi/driver/: oled_ssd1327.h
include/epd-spi/panel/: epd_gdew042t2.h  epd_wfh0420cz35.h  lcd_generic_ssd1289.h  lcd_gv6416gfsl_011.h  lcd_jlx256128g_920.h  oled_elw1501aa.h  oled_zjy150s700.h
include/private/: epd_private.h
include/private/panel/: epd_gdew042t2_lut.h
src/: epd_common.c  epd_panel_gdew042t2.c  epd_panel_wfh0420cz35.c  lcd_panel_jlx256128g_920.c  oled_panel_elw1501aa.c
src/driver/: oled_ssd1327.c
src/panel/: epd_gdew042t2.c  epd_wfh0420cz35.c  lcd_generic_ssd1289.c  lcd_gv6416gfsl_011.c  lcd_jlx256128g_920.c  oled_elw1501aa.c  oled_zjy150s700.c
